<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundColor"
    tools:context="tomaszmarzec.udacity.android.udacityandroidquiz2.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_left_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_right_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/question1textView"
            style="@style/QuestionStyle"
            android:text="@string/single_choice_question1"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            />

        <RadioGroup
            android:id="@+id/single_choice_question1_answer_block"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:layout_constraintTop_toBottomOf="@id/question1textView"
            app:layout_constraintStart_toStartOf="@id/guideline_left_middle"
            >
            <RadioButton
                android:id="@+id/single_choice_question1_answer1"
                style="@style/AnswerStyle"
                android:text="@string/single_choice_question1_answer1" />
            <RadioButton
                android:id="@+id/single_choice_question1_answer2"
                style="@style/AnswerStyle"
                android:text="@string/single_choice_question1_answer2" />
            <RadioButton
                android:id="@+id/single_choice_question1_answer3"
                style="@style/AnswerStyle"
                android:text="@string/single_choice_question1_answer3" />
        </RadioGroup>

        <TextView
            android:id="@+id/open_question1_text"
            style="@style/QuestionStyle"
            android:text="@string/open_question1"

            app:layout_constraintTop_toBottomOf="@id/single_choice_question1_answer_block"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            />

        <EditText
            android:id="@+id/open_question1_answer"
            style="@style/TextAnswerStyle"

            android:hint="@string/open_question1_hint"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/open_question1_text"
            app:layout_constraintStart_toStartOf="@id/guideline_left_middle"
           />

        <TextView
            android:id="@+id/question3textView"
            style="@style/QuestionStyle"
            android:text="@string/multiple_answer_question1"

            app:layout_constraintTop_toBottomOf="@id/open_question1_answer"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            />

        <CheckBox
            android:id="@+id/multiple_question1_box1"
            style="@style/CheckboxStyle"
            android:text="@string/multiple_choice_question1_answer1"

            app:layout_constraintTop_toBottomOf="@id/question3textView"
            app:layout_constraintStart_toStartOf="@id/guideline_left_middle" />
        <CheckBox
            android:id="@+id/multiple_question1_box2"
            style="@style/CheckboxStyle"
            android:text="@string/multiple_choice_question1_answer2"

            app:layout_constraintTop_toBottomOf="@id/multiple_question1_box1"
            app:layout_constraintStart_toStartOf="@id/guideline_left_middle" />
        <CheckBox
            android:id="@+id/multiple_question1_box3"
            style="@style/CheckboxStyle"
            android:text="@string/multiple_choice_question1_answer3"

            app:layout_constraintTop_toBottomOf="@id/multiple_question1_box2"
            app:layout_constraintStart_toStartOf="@id/guideline_left_middle" />
        <CheckBox
            android:id="@+id/multiple_question1_box4"
            style="@style/CheckboxStyle"
            android:text="@string/multiple_choice_question1_answer4"

            app:layout_constraintTop_toBottomOf="@id/multiple_question1_box3"
            app:layout_constraintStart_toStartOf="@id/guideline_left_middle" />
        <CheckBox
            android:id="@+id/multiple_question1_box5"
            style="@style/CheckboxStyle"
            android:text="@string/multiple_choice_question1_answer5"

            app:layout_constraintTop_toBottomOf="@id/multiple_question1_box4"
            app:layout_constraintStart_toStartOf="@id/guideline_left_middle" />

        <TextView
            android:id="@+id/single_choice_question2_text"
            style="@style/QuestionStyle"
            android:text="@string/single_choice_question2"

            app:layout_constraintTop_toBottomOf="@id/multiple_question1_box5"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            />

        <RadioGroup
            android:id="@+id/single_choice_question2_answer_block"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/single_choice_question2_text"
            app:layout_constraintStart_toStartOf="@id/guideline_left_middle">
            <RadioButton
                android:id="@+id/single_choice_question2_answer1"
                style="@style/AnswerStyle"
                android:text="@string/single_choice_question2_answer1"/>
            <RadioButton
                android:id="@+id/single_choice_question2_answer2"
                style="@style/AnswerStyle"
                android:text="@string/single_choice_question2_answer2"/>
            <RadioButton
                android:id="@+id/single_choice_question2_answer3"
                style="@style/AnswerStyle"
                android:text="@string/single_choice_question2_answer3"/>
            <RadioButton
                android:id="@+id/single_choice_question2_answer4"
                style="@style/AnswerStyle"
                android:text="@string/single_choice_question2_answer4"/>
        </RadioGroup>

        <Button
            android:id="@+id/finish_button"
            style="@style/ButtonStyle"
            android:text="@string/check_button"
            android:onClick="summarize"

            app:layout_constraintTop_toBottomOf="@id/single_choice_question2_answer_block"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
